--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Magic Market</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-		integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -20,20 +20,30 @@
 </head>
 
 <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <!--Card information-->
-                            {% block content %}
-                            {% endblock %}
-                            <!--Card information-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="{% url 'home_page' %}">MagicMarket</a>
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="{% url 'get_cards' %}">View Listings</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="{% url 'new_card' %}">Add a new listing</a></li>
+				</ul>
+			</ul>
+		</div>
+	</nav>
+	<!--Card information-->
+	{% block content %}
+	{% endblock %}
+	<!--Card information-->
 </body>
+
 
 </html>
