--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% for card in cards %}
-        <p>{{ card.card_title }}</p>
-        <p>{{ card.card_description|truncatewords:30 }}</p>
-        <br>
+{% for card in cards %}
+<p>{{ card.card_title }}</p>
+<p>{{ card.card_description|truncatewords:30 }}</p>
+<p><a href="{% url 'card_detail' card.id %}" class="btn btn-default">Read more</a></p>
+<br>
     {% endfor %}
 {% endblock %}
