--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+{% if messages %}
+    <div>
+        {% for message in messages %}
+            {{message}}
+        {% endfor %}
+    </div>
+{% endif %}
 <h1>This is the home page</h1>
 <h2>Popular Listings (Sorted by views)</h2>
  {% for card in cards %}
