added user registration

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -9,7 +9,7 @@
 {% if messages %}
     <div>
         {% for message in messages %}
-            {{message}}
+            <h1>{{message}}</h1>
         {% endfor %}
     </div>
 {% endif %}
