--- a/templates/base.html
+++ b/templates/base.html
@@ -23,15 +23,22 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{% url 'get_cards' %}">View Listings</a>
 				</li>
+				{% if user.is_authenticated %}
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'new_card' %}">Add a new listing</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
+				</li>
+				{% else %}
+				<li class="nav-item">
 					<a class="nav-link" href="{% url 'login' %}">Login</a>
 				</li>
                 <li class="nav-item">
-					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
+					<a class="nav-link" href="{% url 'register' %}">Register</a>
 				</li>
+				{% endif %}
+
 			</ul>
 		</div>
 	</nav>
