--- a/cards/templates/cardinformation.html
+++ b/cards/templates/cardinformation.html
@@ -4,7 +4,19 @@
 <p>{{ card.card_description|truncatewords:30 }}</p>
 <p><span class="boldtext">Edition:</span> {{ card.card_edition }}</p>
 <p><span class="boldtext">Condition:</span> {{ card.card_condition }}</p>
+<p><span class="boldtext">Price:</span> {{ card.card_price }}</p>
 <p><span class="boldtext">Listing Published date:</span> {{ card.listing_published_date }} </p>
 <a href="{% url 'get_cards' %}" class="btn btn-default">View Other Listings</a>
 <a href="{% url 'edit_card' card.id %}" class="btn btn-default">Edit Listing</a>
+{% if user.is_authenticated %}
+<form method="post" action="{% url 'add_to_cart' card.id %}">
+    {% csrf_token %}
+    <div class="input-group">
+        <input name="quantity" type="number" min="1" max="10000" class="form-control" placeholder="Quantity" value="1">
+        <span class="input-group-btn">
+            <button class="btn btn-success" type="submit">Add</button>
+        </span>
+    </div>
+</form>
+{% endif %}
 {% endblock %}
