--- a/templates/base.html
+++ b/templates/base.html
@@ -20,12 +20,18 @@
   </button>
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="{% url 'get_cards' %}">View Listings</a>
 				</li>
 				{% if user.is_authenticated %}
 				<li class="nav-item">
+					<a class="nav-link" href="{% url 'view_user' %}">My Profile</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="{% url 'new_card' %}">Add a new listing</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'view_cart' %}">View Cart</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
@@ -34,7 +40,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'login' %}">Login</a>
 				</li>
-                <li class="nav-item">
+				<li class="nav-item">
 					<a class="nav-link" href="{% url 'register' %}">Register</a>
 				</li>
 				{% endif %}
