add stripe payment checkout

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -24,6 +24,6 @@
 <div class="row">
     <p>Total</p>
     <p>£{{ total }}</p>
-    <a href="/" class="btn btn-success" role="button">Checkout</a>
+    <a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
 </div>
 {% endblock %}
