--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
+{% load static from staticfiles %}
 {% block content %}
-{% for card in cards %}
-<p>{{ card.card_title }}</p>
-<p>{{ card.card_description|truncatewords:30 }}</p>
-<p><a href="{% url 'card_detail' card.id %}" class="btn btn-default">Read more</a></p>
-<br>
+<div class="col-sm-12 col-md-12 col-lg-6">
+	{% for card in cards %}
+	<p>{{ card.card_title }}</p>
+	<p>{{ card.card_description|truncatewords:30 }}</p>
+	<p><a href="{% url 'card_detail' card.id %}" class="btn btn-default">Read more</a></p>
+	<br>
     {% endfor %}
-{% endblock %}
+</div>
+	{% endblock %}
