--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
 	<title>Magic Market</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 	</script>
@@ -19,6 +21,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 	</script>
+    <script src="https://kit.fontawesome.com/af915a2cd1.js" crossorigin="anonymous"></script>
 	{% block head_js %}
 	{% endblock %}
 </head>
@@ -64,7 +67,7 @@
 				<li>
 					<!--Search Bar-->
 					<form action="{% url 'search' %}" method="GET">
-						<div class="input-group mb-3">
+						<div class="input-group">
 							<input class="form-control" type="text" name="q">
 							<div class="input-group-append">
 								<button type="submit">Search</button>
