--- a/cards/templates/cardinformation.html
+++ b/cards/templates/cardinformation.html
@@ -6,17 +6,15 @@
 <p><span class="boldtext">Condition:</span> {{ card.card_condition }}</p>
 <p><span class="boldtext">Price:</span> {{ card.card_price }}</p>
 <p><span class="boldtext">Listing Published date:</span> {{ card.listing_published_date }} </p>
-<a href="{% url 'get_cards' %}" class="btn btn-default">View Other Listings</a>
-<a href="{% url 'edit_card' card.id %}" class="btn btn-default">Edit Listing</a>
+<a href="{% url 'get_cards' %}" class="button-effect">View Other Listings</a>
+<a href="{% url 'edit_card' card.id %}" class="button-effect">Edit Listing</a>
 {% if user.is_authenticated %}
 <form method="post" action="{% url 'add_to_cart' card.id %}">
-    {% csrf_token %}
-    <div class="input-group">
-        <input name="quantity" type="number" min="1" max="10000" class="form-control" placeholder="Quantity" value="1">
-        <span class="input-group-btn">
-            <button class="btn btn-success" type="submit">Add</button>
-        </span>
-    </div>
+	{% csrf_token %}
+	<div class="input-group">
+		<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+		<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+	</div>
 </form>
 {% endif %}
 {% endblock %}
