--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
 
-{{ user }}'s Profile
+<h1 class="padding-top padding-bottom center">{{ profile.username }}</h1>
 {% endblock %}
