--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -23,7 +23,7 @@
 	</div>
 </div>
 <!---->
-<div class="row justify-content-around max-width padding-top">
+<div class="row justify-content-around max-width pt-3">
 	<!--Popular cards sorted by views-->
 	<div class="col-sm-12 col-md-12 col-lg-4">
 		<h1 class="pb-3 mb-4 border-bottom">
