--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'get_cards' %}">View Listings</a>
+					<a class="nav-link" href="{% url 'get_cards' %}">Browse</a>
 				</li>
 				{% if user.is_authenticated %}
 				<li class="nav-item">
