--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 	</script>
     <script src="https://kit.fontawesome.com/af915a2cd1.js" crossorigin="anonymous"></script>
+    
 	{% block head_js %}
 	{% endblock %}
 </head>
@@ -88,6 +89,7 @@
 		{% endblock %}
 		<!--Card information End-->
 	</div>
+<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
 </body>
 
 </html>
