--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,14 +11,6 @@ a:hover{
     width: 100%;
 }
 
-.padding-top{
-    padding-top: 2rem;
-}
-
-.padding-bottom{
-    padding-bottom: 2rem;
-}
-
 .center{
     text-align: center;
 }
@@ -26,7 +18,7 @@ a:hover{
 .button-effect{
     border-style: solid;
     padding: 5px;
-    margin: 20px;
+    margin: 0 20px 0 20px;
     color: #fff;
     background-color: #000;
     border-radius: 8px;
@@ -58,7 +50,15 @@ a:hover{
         display: none;
     }
 
+.card-image{
+    max-height: 270px;
+    display: none;
+}
 
+#show-image{
+    height: auto;
+    width: auto;
+}
 
 
 /* MEDIA QUERIES */ 
