--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,9 @@
 	<title>Magic Market</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 	</script>
@@ -21,75 +21,77 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 	</script>
-    <script src="https://kit.fontawesome.com/af915a2cd1.js" crossorigin="anonymous"></script>
-    
+	<script src="https://kit.fontawesome.com/af915a2cd1.js" crossorigin="anonymous"></script>
+
 	{% block head_js %}
 	{% endblock %}
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="{% url 'home_page' %}">MagicMarket</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+	<div class="container-fluid">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="{% url 'home_page' %}">MagicMarket</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-		<div class="collapse navbar-collapse" id="navbarText">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'get_cards' %}">Browse</a>
-				</li>
-				{% if user.is_authenticated %}
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'view_user' %}">My Profile</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'new_card' %}">Add a new listing</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'view_cart' %}">View Cart
-						{% if cards_count > 0 %}
-						<label>{{ cards.count }}</label>
-						{% endif %}
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
-				</li>
-				{% else %}
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'login' %}">Login</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'register' %}">Register</a>
-				</li>
-				{% endif %}
-			</ul>
-			<ul class="navbar-nav">
-				<li>
-					<!--Search Bar-->
-					<form action="{% url 'search' %}" method="GET">
-						<div class="input-group">
-							<input class="form-control" type="text" name="q">
-							<div class="input-group-append">
-								<button type="submit">Search</button>
+			<div class="collapse navbar-collapse" id="navbarText">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'get_cards' %}">Browse</a>
+					</li>
+					{% if user.is_authenticated %}
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'view_user' %}">My Profile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'new_card' %}">Add a new listing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'view_cart' %}">View Cart
+							{% if cards_count > 0 %}
+							<label>{{ cards.count }}</label>
+							{% endif %}
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'logout' %}">Logout</a>
+					</li>
+					{% else %}
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'login' %}">Login</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'register' %}">Register</a>
+					</li>
+					{% endif %}
+				</ul>
+				<ul class="navbar-nav">
+					<li>
+						<!--Search Bar-->
+						<form action="{% url 'search' %}" method="GET">
+							<div class="input-group">
+								<input class="form-control" type="text" name="q">
+								<div class="input-group-append">
+									<button type="submit">Search</button>
+								</div>
 							</div>
-						</div>
-					</form>
-					<!--Search Bar End-->
-				</li>
-			</ul>
-		</div>
-	</nav>
-
-
-
+						</form>
+						<!--Search Bar End-->
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</div>
 	<div class="container">
 		<!--Card information-->
 		{% block content %}
 		{% endblock %}
 		<!--Card information End-->
 	</div>
-<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+
+	{% block end_js %}
+	{% endblock %}
+
 </body>
 
 </html>
