--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -14,6 +14,35 @@
 {% endif %}
 <!--End messages section-->
 
+<!-- Carousel Testing -->
+<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'img/ikoria_banner_img2.jpg' %}" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<!---->
+
 <!--Website Header-->
 <div class="row">
 	<div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
@@ -49,13 +78,13 @@
                 {% endif %}
 
 			</div>
-				<p><a href="{% url 'card_detail' card.id %}" class="btn btn-default button-effect">Read more</a></p>
+				<p><a href="{% url 'card_detail' card.id %}" class="btn btn-primary">Read more</a></p>
 			</div>
 			{% endfor %}
 		</div>
 		<!--End of popular cards sections-->
 
-		<!--Second section, currently also just popular cards. FILLER!!!-->
+		<!--Latest listings section-->
 		<div class="col-sm-12 col-md-12 col-lg-4">
 			<h1 class="pb-3 mb-4 border-bottom">
 				Recent Listings
@@ -73,7 +102,7 @@
                     {% endif %}
 
 				</div>
-					<p><a href="{% url 'card_detail' card.id %}" class="btn btn-default button-effect">Read more</a></p>
+					<p><a href="{% url 'card_detail' card.id %}" class="btn btn-primary">Read more</a></p>
 				</div>
 				{% endfor %}
 			</div>
