--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>This is the registration page</h1>
-<p>If you already have an account, please <a href="{% url 'login' %}">log in here</a></p>
+<div class="container">
+	<h1>This is the registration page</h1>
+	<p>If you already have an account, please <a href="{% url 'login' %}">log in here</a></p>
 
-<form method="POST">
-    {%csrf_token%}
-    {{ registration_form.as_p }}
-    <button type="submit">Register</button>
-</form>
+	<form method="POST">
+		{%csrf_token%}
+		{{ registration_form.as_p }}
+		<button type="submit">Register</button>
+	</form>
+</div>
 {% endblock %}
