--- a/cards/templates/addcards.html
+++ b/cards/templates/addcards.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-    <h1>New Listing</h1>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form | as_bootstrap }}
-        <button type="submit" class="btn btn-info">Save</button>
-    </form>
+<div class="container">
+	<h1>New Listing</h1>
+	<form method="POST" enctype="multipart/form-data">
+		{% csrf_token %}
+		{{ form | as_bootstrap }}
+		<button type="submit" class="btn btn-info">Save</button>
+	</form>
+</div>
 {% endblock %}
