--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -2,59 +2,62 @@
 {% load static from staticfiles %}
 {% block content %}
 <!--Page header-->
-<div class="row">
-	<div class="text-center max-width pt-3 pb-5">
-		<h3>All listings!</h3>
+<div class="container">
+	<div class="row">
+		<div class="text-center max-width pt-3 pb-5">
+			<h3>All listings!</h3>
+		</div>
 	</div>
-</div>
-<!--End of page header-->
-<!--Table header-->
-<div class="row padding-bottom hidden-when-small">
-	<div class="col-sm-12 col-md-3">
-		<p><u>Vendor Name</u></p>
+	<!--End of page header-->
+	<!--Table header-->
+	<div class="row padding-bottom hidden-when-small">
+		<div class="col-sm-12 col-md-3">
+			<p><u>Vendor Name</u></p>
+		</div>
+		<div class="col-sm-12 col-md-2">
+			<p><u>Card Name</u></p>
+		</div>
+		<div class="col-sm-12 col-md-2">
+			<p><u>Condition</u></p>
+		</div>
+		<div class="col-sm-12 col-md-1">
+			<p><u>Price</u></p>
+		</div>
 	</div>
-	<div class="col-sm-12 col-md-2">
-		<p><u>Card Name</u></p>
-	</div>
-	<div class="col-sm-12 col-md-2">
-		<p><u>Condition</u></p>
-	</div>
-	<div class="col-sm-12 col-md-1">
-		<p><u>Price</u></p>
-	</div>
-</div>
-<!--End of table header-->
+	<!--End of table header-->
 
-<!--List of cards-->
-{% for card in cards %}
-<div class="row pb-4">
-	<div class="col-sm-12 col-md-3"><a href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a></div>
-	<div class="col-sm-12 col-md-2">{{ card.card_title }}</div>
-	<div class="col-sm-12 col-md-2">{{ card.card_condition }}</div>
-	<div class="col-sm-12 col-md-1">£{{ card.card_price }}</div>
-	<div class="col-sm-12 col-md-2"><a href="{% url 'card_detail' card.id %}" class="btn-primary">View Listing</a>
-	</div>
+	<!--List of cards-->
+	{% for card in cards %}
+	<div class="row pb-4">
+		<div class="col-sm-12 col-md-3"><a href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+		</div>
+		<div class="col-sm-12 col-md-2">{{ card.card_title }}</div>
+		<div class="col-sm-12 col-md-2">{{ card.card_condition }}</div>
+		<div class="col-sm-12 col-md-1">£{{ card.card_price }}</div>
+		<div class="col-sm-12 col-md-2"><a href="{% url 'card_detail' card.id %}" class="btn-primary button-effect">View
+				Listing</a>
+		</div>
 
-	{% if user.is_authenticated %}
-	<div class="col-sm-12 col-md-2 negative-top">
-		<form method="post" action="{% url 'add_to_cart' card.id %}">
-			{% csrf_token %}
-			<div class="input-group">
-				<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000" placeholder="Quantity" value="1">
-				<span class="input-group-btn">
+		{% if user.is_authenticated %}
+		<div class="col-sm-12 col-md-2 negative-top">
+			<form method="post" action="{% url 'add_to_cart' card.id %}">
+				{% csrf_token %}
+				<div class="input-group">
+					<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000" placeholder="Quantity" value="1">
+					<span class="input-group-btn">
             <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
         </span>
-			</div>
-		</form>
+				</div>
+			</form>
+		</div>
+		{% endif %}
+
+
+
 	</div>
-	{% endif %}
-
-
-
+	{% endfor %}
+	<!--End of list of cards-->
 </div>
-{% endfor %}
-<!--End of list of cards-->
-
 {% endblock %}
 
 
