--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -14,60 +14,61 @@
 </div>
 <!--End messages section-->
 
-<!-- Carousel Testing -->
-<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="{% static 'img/ikoria_banner_img2.jpg' %}" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<!---->
-
-<!--Website Header-->
+<!-- Carousel -->
 <div class="row">
-	<div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
-		<h3 class="display-4">This is the home page</h3>
-		<p class="lead">This is filler text below the home page. Lorem, ipsum dolor sit amet consectetur adipisicing
-			elit.tatibus excepturi voluptas itaque? A debitis tempore libero itaque!</p>
+	<div id="carouselIndicators" class="carousel slide col-sm-12" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="First slide">
+            </div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="Second slide">
+            </div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img2.jpg' %}" alt="Third slide">
+            </div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
 	</div>
 </div>
+<!--End of carousel-->
+<div class="container">
+<!--Website Header-->
+	<div class="row">
+	    <div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
+			<h3 class="display-4">This is the home page</h3>
+			<p class="lead">This is filler text below the home page. Lorem, ipsum dolor sit amet consectetur
+							adipisicing
+							elit.tatibus excepturi voluptas itaque? A debitis tempore libero itaque!</p>
+		</div>
+	</div>
 <!---->
-<div class="row justify-content-around max-width pt-3">
-	<!--Popular cards sorted by views-->
-	<div class="col-sm-12 col-md-12 col-lg-4">
-		<h1 class="pb-3 mb-4 border-bottom">
-			Popular Listings
-		</h1>
+	<div class="row justify-content-around max-width pt-3">
+<!--Popular cards sorted by views-->
+		<div class="col-sm-12 col-md-12 col-lg-4">
+			<h1 class="pb-3 mb-4 border-bottom">
+				Popular Listings
+			</h1>
 
-		{% for card in cards|dictsortreversed:"listing_views" %}
+			{% for card in cards|dictsortreversed:"listing_views" %}
 
-
-
-		<!--This is a test id to try to trigger the display image function in custom.js-->
-		<button class="button" id="show-image-{{ forloop.counter0 }}">Show Image</button>
-		<button class="button" id="hide-image-{{ forloop.counter0 }}">Hide Image</button>
-		<!---->
-		<div class="card mb-4 shadow-sm">
+<!--This is a test id to try to trigger the display image function in custom.js-->
+			<button class="button" id="show-image-{{ forloop.counter0 }}">Show Image</button>
+			<button class="button" id="hide-image-{{ forloop.counter0 }}">Hide Image</button>
+<!---->
+			<div class="card mb-4 shadow-sm">
 
 			<div class="card-header">
 				{{ card.card_title }}
@@ -76,42 +77,44 @@
 				<p>{{ card.card_description|truncatewords:30 }}</p>
 
 				{% if card.image %}
-				<img class="card-image" id="card-image-test-{{ forloop.counter0 }}" src="/media/{{ card.image }}">
+			    <img class="card-image" id="card-image-test-{{ forloop.counter0 }}" src="/media/{{ card.image }}">
                 {% endif %}
 
 			</div>
-				<p><a href="{% url 'card_detail' card.id %}" class="btn btn-primary">Read more</a></p>
-			</div>
-			{% endfor %}
-		</div>
-		<!--End of popular cards sections-->
+								<p><a href="{% url 'card_detail' card.id %}" class="btn btn-custom">Read more</a></p>
+							</div>
+							{% endfor %}
+						</div>
+						<!--End of popular cards sections-->
 
-		<!--Latest listings section-->
-		<div class="col-sm-12 col-md-12 col-lg-4">
-			<h1 class="pb-3 mb-4 border-bottom">
-				Recent Listings
-			</h1>
-			{% for card in cards|dictsortreversed:"listing_created_date"%}
+						<!--Latest listings section-->
+						<div class="col-sm-12 col-md-12 col-lg-4">
+							<h1 class="pb-3 mb-4 border-bottom">
+								Recent Listings
+							</h1>
+							{% for card in cards|dictsortreversed:"listing_created_date"%}
 
-			<div class="card mb-4 shadow-sm">
-				<div class="card-header">
-					{{ card.card_title }}
-				</div>
-				<div class="card-body">
-					<p>{{ card.card_description|truncatewords:30 }}</p>
-					{% if card.image %}
-					<img class="card-image" src="/media/{{ card.image }}">
-                    {% endif %}
+							<div class="card mb-4 shadow-sm">
+								<div class="card-header">
+									{{ card.card_title }}
+								</div>
+								<div class="card-body">
+									<p>{{ card.card_description|truncatewords:30 }}</p>
+									{% if card.image %}
+									<img class="card-image" src="/media/{{ card.image }}">
+                                {% endif %}
 
-				</div>
-					<p><a href="{% url 'card_detail' card.id %}" class="btn btn-primary">Read more</a></p>
-				</div>
-				{% endfor %}
-			</div>
-			<!--End of FILLER SECTION-->
-		</div>
-		{% endblock %}
+				                </div>
+									<p><a href="{% url 'card_detail' card.id %}" class="btn btn-custom">Read more</a>
+									</p>
+								</div>
+								{% endfor %}
+							</div>
+							<!--End of FILLER SECTION-->
+						</div>
+					</div>
+					{% endblock %}
 
-		{% block end_js %}
-		<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-		{% endblock %}
+					{% block end_js %}
+					<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+					{% endblock %}
