--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -5,7 +5,7 @@
 {% block head_js %}
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
-    //<![CDATA[
+	//<![CDATA[
         Stripe.publishableKey = '{{ publishable }}';
     //]]>
 </script>
@@ -13,41 +13,43 @@
 {% endblock %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
+<div class="container">
+	<div class="row row-flex">
+		{% for item in cart_items %}
 
-    <div class="display panel panel-default">
-        <div class="panel-body">
-            <div class="caption">
-                <h3>{{item.card.name}}</h3>
-                <p class="card-description">{{ item.card.description }}</p>
-                <p>{{ item.card.quantity }}</p>
-                <p>{{ item.card.price }}</p>
-            </div>
-        </div>
+		<div class="display panel panel-default">
+			<div class="panel-body">
+				<div class="caption">
+					<h3>{{item.card.name}}</h3>
+					<p class="card-description">{{ item.card.description }}</p>
+					<p>{{ item.card.quantity }}</p>
+					<p>{{ item.card.price }}</p>
+				</div>
+			</div>
+		</div>
+		{% endfor %}
+		<p>Total</p>
+		{{ total }}
+	</div>
+
+	<form role="form" method="POST" id="payment-form" action="{% url 'checkout' %}">
+		<legend>Payment Details</legend>
+		<div class="credit-card-errors" style="display:none">
+			<div class="alert-message block-message error" id="stripe-error-message"></div>
+		</div>
+
+		<div class="form-group">
+			{{ order_form|as_bootstrap }}
+		</div>
+
+		<div class="form-group">
+			{{ payment_form|as_bootstrap }}
+		</div>
+
+		{% csrf_token %}
+		<div class="form-group">
+			<input class="btn btn-primary" id="submit_payment_button" name="commit" type="submit" value="Submit Payment">
     </div>
-    {% endfor %}
-    <p>Total</p>
-    {{ total }}
+	</form>
 </div>
-
-<form role="form" method="POST" id="payment-form" action="{% url 'checkout' %}">
-    <legend>Payment Details</legend>
-    <div class="credit-card-errors" style="display:none">
-        <div class="alert-message block-message error" id="stripe-error-message"></div>
-    </div>
-
-    <div class="form-group">
-        {{ order_form|as_bootstrap }}
-    </div>
-
-    <div class="form-group">
-        {{ payment_form|as_bootstrap }}
-    </div>
-
-    {% csrf_token %}
-    <div class="form-group">
-        <input class="btn btn-primary" id="submit_payment_button" name="commit" type="submit" value="Submit Payment">
-    </div>
-</form>
 {% endblock %}
