--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,8 @@
 </head>
 
 <body>
-	<div class="container-fluid">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container-fluid navbar-background">
+		<nav class="navbar navbar-expand-lg navbar-dark">
 			<a class="navbar-brand" href="{% url 'home_page' %}">MagicMarket</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -82,12 +82,10 @@
 			</div>
 		</nav>
 	</div>
-	<div class="container">
 		<!--Card information-->
 		{% block content %}
 		{% endblock %}
 		<!--Card information End-->
-	</div>
 
 	{% block end_js %}
 	{% endblock %}
