--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -64,22 +64,18 @@
 				<div class="row justify-content-around pt-3">
 					<!--Popular cards sorted by views-->
 					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="pb-3 mb-4 ">
+						<h1 class="pb-3 mb-4 center">
 							Popular Listings
 						</h1>
 
 						{% for card in cards|dictsortreversed:"listing_views" %}
-                        
+
 						<!--This is a test id to try to trigger the display image function in custom.js-->
 						<button class="button" onclick="imageToggleHide({{ card.id }})">Hide Image</button>
 						<button class="button" onclick="imageToggleShow({{ card.id }})">Show Image</button>
-
-                        <script>
-                        console.log("The card ID is {{card.id}}")
-                        </script>
-
-
+                        <img src="{% static 'img/camera_icon.png' %}" alt="Camera Icon" onmouseover="imageToggleHide({{ card.id }})" onmouseout="imageToggleShow({{ card.id }})">
 						<!---->
+
 						<div class="card mb-4 shadow-sm">
 
 							<div class="card-header">
@@ -90,7 +86,7 @@
 
 								{% if card.image %}
 								<img class="card-image" id="{{card.id}}" src="/media/{{ card.image }}">
-                {% endif %}
+                                {% endif %}
 
 			</div>
 								<p><a href="{% url 'card_detail' card.id %}" class="btn btn-custom">Read more</a></p>
@@ -101,39 +97,27 @@
 
 						<!--Latest listings section-->
 						<div class="col-sm-12 col-md-12 col-lg-4">
-							<h1 class="pb-3 mb-4">
+							<h1 class="pb-3 mb-4 center">
 								Recent Listings
 							</h1>
 							{% for card in cards|dictsortreversed:"listing_created_date"%}
-
-							<div class="card mb-4 shadow-sm">
-								<div class="card-header">
-									{{ card.card_title }}
-								</div>
-								<div class="card-body">
-									<p>{{ card.card_description|truncatewords:30 }}</p>
-									{% if card.image %}
+							<!--testing different styles-->
+							<a href="{% url 'card_detail' card.id %}">
+								<div class="card-minimalistic">
 									<img class="card-image" src="/media/{{ card.image }}">
-                                    {% endif %}
-
-				                </div>
-									<p><a href="{% url 'card_detail' card.id %}" class="btn btn-custom">Read more</a>
-									</p>
+									<p>{{ card.card_title }}</p>
+									<p>£{{ card.card_price }}</p>
 								</div>
+							</a>
+							<!---->
 
-								<!--testing different styles-->
-                                <img class="card-image" src="/media/{{ card.image }}">
-								<p>{{ card.card_title }}</p>
-                                <p>£{{ card.card_price }}</p>
-								<!---->
-
-								{% endfor %}
-							</div>
-							<!--End of FILLER SECTION-->
+							{% endfor %}
 						</div>
+						<!--End of FILLER SECTION-->
 					</div>
-					{% endblock %}
+				</div>
+				{% endblock %}
 
-					{% block end_js %}
-					<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-					{% endblock %}
+				{% block end_js %}
+				<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+				{% endblock %}
